<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">

        <TextView
            android:id="@+id/car_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layoutMargin"
            android:layout_marginTop="@dimen/layoutMargin"
            android:text="@string/car_price_rm"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/car_price_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layoutMargin"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/car_price"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_price" />

        <TextView
            android:id="@+id/down_pay"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layoutMargin"
            android:layout_marginTop="@dimen/layoutMargin"
            android:text="@string/down_payment_rm"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/loan_period" />

        <EditText
            android:id="@+id/down_pay_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layoutMargin"
            android:ems="10"
            android:inputType="numberDecimal"
            app:layout_constraintBaseline_toBaselineOf="@+id/down_pay"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/down_pay" />

        <TextView
            android:id="@+id/loan_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layoutMargin"
            android:layout_marginTop="@dimen/layoutMargin"
            android:text="@string/loan_period"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_price" />

        <EditText
            android:id="@+id/loan_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layoutMargin"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/loan_period"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/loan_period" />

        <TextView
            android:id="@+id/interest_rate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/layoutMargin"
            android:text="@string/interest_rate"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/down_pay" />

        <EditText
            android:id="@+id/interest_input"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layoutMargin"
            android:ems="10"
            android:inputType="number"
            app:layout_constraintBaseline_toBaselineOf="@+id/interest_rate"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/interest_rate" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="336dp"
            android:gravity="center_horizontal"
            android:text="@string/calculate"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/car_loan_amt"
            style="@style/MyStyle"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="@dimen/layoutMargin"
            android:text="@string/car_loan_amount_rm"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/car_loan_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layoutMargin"
            android:ems="5"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/car_loan_amt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/car_loan_amt" />

        <TextView
            android:id="@+id/Interest_amt"
            style="@style/MyStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:text="@string/interest_rm"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/car_loan_amt" />

        <TextView
            android:id="@+id/interest_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/layoutMargin"
            android:ems="10"
            android:inputType="numberDecimal"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/Interest_amt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/Interest_amt" />

        <TextView
            android:id="@+id/repayment_amt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/layoutMargin"
            android:layout_marginTop="@dimen/layoutMargin"
            android:text="@string/monthly_repayment_rm"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/Interest_amt" />

        <TextView
            android:id="@+id/repay_price"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:ems="8"
            android:textSize="20sp"
            app:layout_constraintBaseline_toBaselineOf="@+id/repayment_amt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/repayment_amt" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>